# CPOA

./: CMakeLists.txt  CMakeLists.txt.user.d0ca75a  README.md
GT/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
InterfaceCSG/: Array.h  Array.hpp  CMakeLists.txt  Image.h  Vec2.h  Vec2.hpp  Vec2V.cpp  Vec2V.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderImg.cpp  renderImg.h
csg/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  CsgDisk.cpp  CsgDisk.h  CsgPolygon.cpp  CsgPolygon.h  csgNode.cpp  csgNode.h  csgOperation.cpp  csgOperation.h  csgPrimitive.cpp  csgPrimitive.h  csgTree.cpp  csgTree.h
csg/tests/: csg_tests.cpp
image/: CMakeLists.txt  Image2RGB.cpp  Image2RGB.h  cropping.pgm  image2D.h  image2D.hpp  image2Grey.cpp  image2Grey.h  imageTest.cpp  imgGradient.cpp  rgbTest.ppm  rgbTestSave.ppm  sampling.pgm  save.pgm  smoothing.pgm  sobel.pgm  sobel3.pgm  test.pgm  thresholding.pgm
particle/: CMakeLists.txt  particule.cpp  particule.h
vectorMatrix/: CMakeLists.txt  array.h  array.hpp  matrix33d.cpp  matrix33d.h  matrix33d.hpp  vector.h  vector.hpp
vectorMatrix/tests/: CMakeLists.txt  testMatrix.cpp  test_vec.cpp
